# erp

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  justfile
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: verify.md
crates/audit/: Cargo.toml
crates/audit/src/: history.rs  lib.rs  logger.rs
crates/audit/tests/: integration.rs
crates/auth/: Cargo.toml
crates/auth/src/: checker.rs  claims.rs  jwt.rs  lib.rs  middleware.rs  rbac.rs  registry.rs
crates/auth/tests/: integration.rs
crates/bc_http/: Cargo.toml
crates/bc_http/src/: lib.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs  module.rs  registrar.rs
crates/catalog/src/application/: ports.rs
crates/catalog/src/application/commands/: create_product.rs  mod.rs
crates/catalog/src/application/queries/: get_product.rs  mod.rs
crates/catalog/src/db/: mod.rs
crates/catalog/src/domain/: aggregates.rs  errors.rs  events.rs  mod.rs  value_objects.rs
crates/catalog/src/infrastructure/: http.rs  mod.rs  repos.rs  routes.rs
crates/catalog/tests/: integration.rs
crates/clorinde-gen/: Cargo.toml
crates/clorinde-gen/src/: array_iterator.rs  lib.rs  queries.rs  type_traits.rs
crates/clorinde-gen/src/client/: async_.rs
crates/clorinde-gen/src/client/async_/: deadpool.rs  generic_client.rs
crates/clorinde-gen/src/common/: audit.rs  domain_history.rs  inbox.rs  mod.rs  outbox.rs  sequences.rs  tenants.rs
crates/clorinde-gen/src/queries/: catalog.rs  common.rs  warehouse.rs
crates/clorinde-gen/src/queries/catalog/: products.rs
crates/clorinde-gen/src/queries/common/: audit.rs  domain_history.rs  inbox.rs  outbox.rs  sequences.rs  tenants.rs
crates/clorinde-gen/src/queries/warehouse/: balances.rs  inventory.rs  projections.rs
crates/clorinde-gen/src/warehouse/: balances.rs  inventory.rs  mod.rs
crates/db/: Cargo.toml
crates/db/src/: bus_decorator.rs  context.rs  conversions.rs  inbox.rs  lib.rs  migrate.rs  pool.rs  relay.rs  repo_macros.rs  rls.rs  scoped.rs  transport.rs  uow.rs
crates/db/tests/: integration.rs
crates/event_bus/: Cargo.toml
crates/event_bus/src/: bus.rs  envelope.rs  lib.rs  registry.rs  traits.rs
crates/extensions/: Cargo.toml
crates/extensions/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: app_builder.rs  bc_router.rs  config.rs  dev_endpoints.rs  main.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: commands.rs  entity.rs  error_ext.rs  errors.rs  events.rs  lib.rs  queries.rs  security.rs  types.rs
crates/repo_gen/: Cargo.toml
crates/repo_gen/src/: clorinde_parser.rs  emit_facade.rs  emit_repo.rs  emit_types.rs  main.rs  model.rs  sql_parser.rs  validator.rs
crates/repo_gen/tests/: fixtures_and_regression.rs
crates/repo_gen/tests/fixtures/decimal_write_and_read/clorinde/: balances.rs
crates/repo_gen/tests/fixtures/decimal_write_and_read/queries/: balances.sql
crates/repo_gen/tests/fixtures/simple_lookup/clorinde/: items.rs
crates/repo_gen/tests/fixtures/simple_lookup/queries/: items.sql
crates/runtime/: Cargo.toml
crates/runtime/src/: command_handler.rs  dto.rs  dto_macros.rs  lib.rs  module.rs  pipeline.rs  ports.rs  query_handler.rs  query_pipeline.rs  stubs.rs
crates/seq_gen/: Cargo.toml
crates/seq_gen/src/: generator.rs  lib.rs
crates/seq_gen/tests/: integration.rs
crates/test_support/: Cargo.toml
crates/test_support/src/: lib.rs
crates/warehouse/: BC_CONTEXT.md  Cargo.toml
crates/warehouse/src/: lib.rs  module.rs  registrar.rs
crates/warehouse/src/application/: mod.rs  repos.rs
crates/warehouse/src/db/: mod.rs
crates/warehouse/src/domain/: aggregates.rs  errors.rs  events.rs  value_objects.rs
crates/warehouse/tests/: integration.rs
doc/: dbinfo.md
doc/ui/: guide.md
docs/: api_testing_rules.md  architecture.md  architecture_review_2026_04_01.md  auth_overview.md  clorinde_integration_guide.md  clorinde_migration_changelog.md  event_bus_architecture.md  layer0_spec.md  layer1_spec.md  layer2_spec.md  layer3a_spec.md  layer4a_spec.md  layer5a_spec.md  phase2_spec.md  phase3_spec.md  progress_phase5_to_phase4.md  target_architecture.md  testing_integration_style.md
docs/plan/: EXECUTION_PLAN.md  docs_sync_instructions.md  engineering_invariants.md  execution_plan_errata.md  repo_gen_parser_hardening_tz.md  repo_gen_v1_tz.md  sql_repo_dx_tz.md
docs/rust/: step1.md  step2.md  story.md
docs/security/: AUTHORIZATION_ACCEPTANCE_PLAN.md  BC_OWNED_RBAC.md  BC_OWNED_RBAC_IMPLEMENTATION_PROMPT.md
migrations/catalog/: 001_create_products.sql  002_rls_catalog.sql  003_force_rls.sql
migrations/common/: V001__schemas.sql  V002__tenants.sql  V003__rls_setup.sql  V004__outbox.sql  V005__audit.sql  V006__sequences.sql  V007__inbox.sql  V008__domain_history.sql  V009__audit_log_redesign.sql  V010__inbox_per_handler.sql  V011__dead_letters.sql  V012__force_rls.sql
migrations/warehouse/: 001_create_inventory_items.sql  002_create_stock_movements.sql  003_create_inventory_balances.sql  004_rls_warehouse.sql  005_create_product_projections.sql  006_force_rls.sql
queries/catalog/: products.sql
queries/common/: audit.sql  domain_history.sql  inbox.sql  outbox.sql  sequences.sql  tenants.sql
queries/warehouse/: balances.sql  inventory.sql  projections.sql
tests/postman/: README.md  catalog.postman_collection.json  erp-gateway.postman_collection.json  erp-gateway.postman_environment.json  run_newman.sh  smoke.postman_collection.json  warehouse.postman_collection.json
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/doc/: prototype_variant_c.html  ui-architecture-review.md  ui-architecture.md  ui-concept.md  ui-implementation-plan.md  ui-requirements-analysis.md  ui-stack-recommendation.md
ui/src/: main.ts
ui/src/auth/: login-page.ts  mock-users.ts  session.ts  tenant-picker.ts
ui/src/engine/: renderer.ts
ui/src/protocol/: api.ts  mock-server.ts  mock.ts  types.ts
ui/src/shell/: icons.ts  mdi.ts  outlook-bar.ts  ribbon.ts  toast.ts
ui/src/styles/: app.css
(+8 files in other folders)
