[workspace]
resolver = "2"
members = [
    "crates/kernel",
    "crates/db",
    "crates/clorinde-gen",
    "crates/event_bus",
    "crates/auth",
    "crates/audit",
    "crates/seq_gen",
    "crates/runtime",
    "crates/extensions",
    "crates/warehouse",
    "crates/catalog",
    "crates/gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-Proprietary"

[workspace.dependencies]
# --- Async runtime ---
tokio = { version = "1", features = ["full"] }

# --- HTTP framework ---
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# --- Database ---
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", "postgres", "uuid", "chrono",
    "json", "migrate", "bigdecimal"
] }

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Auth ---
jsonwebtoken = "9"

# --- IDs ---
uuid = { version = "1", features = ["v7", "serde"] }

# --- Time ---
chrono = { version = "0.4", features = ["serde"] }

# --- Logging / Tracing ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# --- Extension runtime ---
mlua = { version = "0.10", features = ["luajit", "async", "send"] }
wasmtime = "28"

# --- Error handling ---
thiserror = "2"
anyhow = "1"

# --- Validation ---
validator = { version = "0.19", features = ["derive"] }

# --- Decimal ---
bigdecimal = { version = "0.4", features = ["serde"] }

# --- Templates (thin UI) ---
askama = "0.12"

# --- Async trait ---
async-trait = "0.1"

# --- Testing ---
tokio-test = "0.4"
testcontainers = "0.23"

# --- Internal crates ---
kernel = { path = "crates/kernel" }
db = { path = "crates/db" }
clorinde-gen = { path = "crates/clorinde-gen" }
event_bus = { path = "crates/event_bus" }
auth = { path = "crates/auth" }
audit = { path = "crates/audit" }
seq_gen = { path = "crates/seq_gen" }
runtime = { path = "crates/runtime" }
extensions = { path = "crates/extensions" }
warehouse = { path = "crates/warehouse" }
catalog = { path = "crates/catalog" }
