[package]
name = "bc_http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
kernel = { workspace = true }
runtime = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
