[package]
name = "catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
kernel = { workspace = true }
runtime = { workspace = true }
event_bus = { workspace = true }
bc_http = { workspace = true }
db = { workspace = true }
clorinde-gen = { workspace = true }
audit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
auth = { workspace = true }
warehouse = { workspace = true }
bigdecimal = { workspace = true }
