[package]
name = "gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "erp-gateway"
path = "src/main.rs"

[dependencies]
kernel = { workspace = true }
runtime = { workspace = true }
event_bus = { workspace = true }
db = { workspace = true }
auth = { workspace = true }
audit = { workspace = true }
warehouse = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
