[package]
name = "seq_gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
kernel = { workspace = true }
tokio-postgres = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
db = { workspace = true }
tokio = { workspace = true }
